# xoscope

./: .gitignore  AUTHORS  ChangeLog  HARDWARE  INTERNALS  Makefile  Makefile.am  Makefile.dos  Makefile.in  NEWS  README  README.f51  README.parport  TODO  TODO.old  acconfig.h  aclocal.m4  alsa.c  appstream.xml  bitscope.c  bitscope.glade  bitscope.h  callbacks.c  callbacks.h  com_gtk.c  com_gtk.h  comedi-parport.patch  comedi.c  comedi.glade  comedi_gtk.c  config.h  config.h.in  configure  configure.ac  configure.in  dirlist.c  display.c  display.h  esd.c  esd_gtk.c  (+64 more)
bitscope-glade-src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c
comedi-glade-src/: Makefile.am  Makefile.in  README  callbacks.c  callbacks.h  interface.c  interface.h
glade-src/: Makefile.am  callbacks.c  callbacks.h
gtkdatabox-0.6.0.0/: ChangeLog  Makefile.am  NEWS  README  configure.ac  gtkdatabox.pc.in  gtkdatabox.spec  mkinstalldirs
gtkdatabox-0.6.0.0/examples/: Makefile.am  addremove.c  basics.c  colors.c  enable_disable.c  grid.c  keycontrol.c  lissajous.c  marker.c  signals.c
gtkdatabox-0.6.0.0/gtk/: Makefile.am  gtkdatabox_grid.c  gtkdatabox_lines.c  gtkdatabox_lines.h  gtkdatabox_points.c
