dnl Process this file with autoconf to produce a configure script.

dnl @(#)$Id: configure.in,v 1.8 2004/11/04 19:47:33 baccala Exp $

dnl Copyright (C) 1996 - 2001 Tim Witham <twitham@quiknet.com>

dnl (see the files README and COPYING for more details)

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(xoscope, 1.10)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_ARG_WITH(gtk,
	[  --with-gtk              use GTK (default if found)],
	[gtk=$withval], [gtk=yes])
if test x$gtk = xyes; then
gtk=no
AM_PATH_GTK(1.2.0, gtk=yes,
            AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))
fi
AM_CONDITIONAL(GTK, test x$gtk = xyes)
if test x$gtk = xyes; then
    XOSCOPE=xoscope
fi

dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${datadir}" = 'x${prefix}/share'; then
  if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${ac_default_prefix}/share/${PACKAGE}")
  else
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${prefix}/share/${PACKAGE}")
  fi
else
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${datadir}/${PACKAGE}")
fi

dnl Set PACKAGE_LIBEXEC_DIR in config.h.
if test "x${libexecdir}" = 'x${exec_prefix}/libexec'; then
  if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(PACKAGE_LIBEXEC_DIR, "${ac_default_prefix}/libexec/${PACKAGE}")
  else
    AC_DEFINE_UNQUOTED(PACKAGE_LIBEXEC_DIR, "${exec_prefix}/libexec/${PACKAGE}")
  fi
else
  AC_DEFINE_UNQUOTED(PACKAGE_LIBEXEC_DIR, "${libexecdir}/${PACKAGE}")
fi

dnl Set PACKAGE_SOURCE_DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

dnl X11 checks
AC_PATH_XTRA
if test "-DX_DISPLAY_MISSING" = "$X_CFLAGS"; then
  AC_MSG_ERROR(can not find X11)
fi
AC_SUBST(X_CFLAGS)
AC_SUBST(X_PRE_LIBS)
AC_SUBST(X_EXTRA_LIBS)
AC_SUBST(X_LIBS)
AC_SUBST(x_libraries)

dnl Checks for programs.
AC_PATH_PROG(PERL, perl, /usr/bin/perl)
AC_PATH_PROG(RANLIB, ranlib)

dnl Checks for libraries.
AC_CHECK_LIB(esd, esd_monitor_stream)
AC_CHECK_LIB(m, sin)
AC_CHECK_LIB(vga, vga_init)
AC_CHECK_LIB(vgamisc, vga_initfont)
AC_CHECK_LIB(comedi, comedi_open)
AM_CONDITIONAL(COMEDI, test "$HAVE_LIBCOMEDI" = "yes")
if test "$HAVE_LIBVGA" = "yes"; then
    OSCOPE=oscope
fi
AC_SUBST(OSCOPE)
AC_SUBST(XOSCOPE)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h sys/ioctl.h sys/time.h termio.h unistd.h \
    libsx.h X11/SX/libsx.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_HEADER_MAJOR
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(getcwd putenv select strdup strstr strtol)

AC_OUTPUT([
operl
Makefile
bitscope-glade-src/Makefile
comedi-glade-src/Makefile
])
